update server.js with endpoints

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "start": "npm run client && npm run server",
     "client": "cd client && npm run build && cd ..",
-    "server": "node server.js",
+    "server": "nodemon server.js",
     "dev": "export PORT=5000 npm run client && npm run server"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "nodemod": "^1.5.19"
   }
 }
