--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "start": "npm run client && npm run server",
     "client": "cd client && npm run build && cd ..",
-    "server": "nodemon server.js",
-    "dev": "export PORT=5000 npm run client && npm run server"
+    "server": "node server.js",
+    "dev": "export PORT=5000 && npm run client && npm run server"
   },
   "dependencies": {
     "express": "^4.16.3",
